--- a/star-wars-profile/package.json
+++ b/star-wars-profile/package.json
@@ -10,19 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.5",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
+    "@types/testing-library__jest-dom": "5.14.5",
     "jest": "^29.3.1",
-    "ts-jest": "^29.0.5"
+    "jest-environment-jsdom": "28.1.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "4.9.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
